# shinestacker

./: .coverage  .flake8  .gitignore  CHANGELOG.md  README.md  align-layers.ipynb  copy-exif-data.ipynb  focus-stack-1.ipynb  focus-stack.ipynb  full-stack.ipynb  lumi-balance.ipynb  pyinstall.sh  pyproject.toml  requirements.txt  test-exif.ipynb  test-job.ipynb  validate-tomli.py
.github/codeql/: codeql-config.yml
.github/workflows/: ci-linux.yml  ci-multiplatform.yml  codeql.yml  (+2 more)
algorithms/: __init__.py  align.py  balance.py  depth_map.py  multilayer.py  noise_detection.py  pyramid.py  pyramid_block.py  stack.py  stack_framework.py  utils.py  vignetting.py
app/: app_config.py  main.py  project.py  retouch.py
config/: __init__.py  config.py  constants.py
core/: framework.py  logging.py
docs/: actions.md  alignment.md  api.md  balancing.md  conf.py  focus_stacking.md  gui.md  index.md  job.md  job_creation.md  main.md  multilayer.md  noise.md  vignetting.md
examples/: amber-flies.fsp  amber-flies.ipynb  balance-only.fsp  coins-stack.fsp  complete-project.fsp  focus-stack-1.ipynb  focus-stack-2.ipynb  focus-stack.ipynb  project.fsp  stack-comparison.fsp  stack-from-frames.fsp  vignetting.fsp
focus_stack/: __init__.py  align.py  balance.py  config.py  depth_map.py  exceptions.py  exif.py  framework.py  helper.py  logging.py  multilayer.py  noise_detection.py  pyramid.py  pyramid_block.py  pyramid_sequential.py  stack.py  stack_framework.py  utils.py  vignetting.py
gui/: __init__.py  action_config.py  brush_controller.py  brush_preview.py  gui_actions.py  gui_constants.py  gui_images.py  gui_logging.py  gui_run.py  gui_utils.py  image_editor.py  image_editor_ui.py  image_viewer.py  logging.py  main.py  main_window.py  menu.py  project_converter.py  project_model.py  retouch.py  undo_manager.py
retouch/: brush_controller.py  brush_preview.py  file_loader.py  gui_constants.py  image_editor.py  image_editor_ui.py  image_viewer.py  undo_manager.py
scripts/: build_release.py  git-rev-list.sh
tests/: test-exif.ipynb  test-job.ipynb  test-logging.ipynb  test-multilayer.ipynb  test-noise-detection.ipynb  test-stack.ipynb  test_0000_logging.py  test_0001_colors.py  test_0010_job.py  test_0011_core_utils.py  test_0020_noise_detection.py  test_0030_align.py  test_0031_align_precision.py  test_0032_align_methods.py  test_0040_balance.py  test_0050_align_balance.py  test_0051_denoise.py  test_0052_sharpen.py  test_0060_stack.py  test_0061_depth_map.py  test_0070_multilayer.py  test_0080_exif.py  test_0090_vignetting.py  test_0091_vignetting_algo.py  test_0100_layer_collection.py  test_1000_brush_mask.py  test_1010_gui.py  test_1020_gui_images.py  test_1030_gui_logging.py  test_1040_action_config.py  test_1050_project_converter.py  test_1060_gui_run.py  test_1070_project_editor.py  test_1080_actions_window.py  test_2000_layer_collection.py  test_2020_io_manager.py  tet-noise-detection.ipynb
(+111 files in other folders)
