[build-system]
requires = ["setuptools>=68.2.2", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "focusstack"
dynamic = ["version"]
description = "FocusStack"
authors = [
    {name = "Luca Lista", email = "luka.lista@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
focusstack-main = "focusstack.app.main:main"
focusstack-project = "focusstack.app.project:main"
focusstack-retouch = "focusstack.app.retouch:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
	 "focusstack",
	 "focusstack.app",
	 "focusstack.config",
	 "focusstack.core",
	 "focusstack.algorithms",
	 "focusstack.gui",
         "focusstack.gui.img",	 
	 "focusstack.retouch"	 
	 ]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"
write_to = "src/focusstack/_version.py"
write_to_template = "__version__ = '{version}'"